Bug 31849 - [UI]: Text in Buttons with "see more double arrow" misplaced
Summary: [UI]: Text in Buttons with "see more double arrow" misplaced
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.0 Beta3
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords:
: 59866 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-22 22:59 UTC by Rainer Bielefeld Retired
Modified: 2013-05-01 17:06 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots showing problem (35.50 KB, application/pdf)
2010-11-22 22:59 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2010-11-22 22:59:15 UTC
Created attachment 40491 [details]
Screenshots showing problem

In dialogs for Filter and 'Define Database Range' Text in Button is no longer vertically centered.

Additionally it has to be checked whether buttons are wide enough for text in all languages. In German UI arrows are outside button (they appear if you select menu 'Tools -> Options -> LibO -> Appearance -> scale - 80%). May be for this problem an additional bug report should be filed?
Comment 1 Rainer Bielefeld Retired 2010-11-30 22:10:00 UTC
Vertical misalignment also in dialog "Search and Replace", WRITER and CALC, DRAW. So that problem concerns all LibO applications.
Comment 2 Jeffrey 2011-06-20 19:06:06 UTC
I do not have the German version of Libreoffice so I cannot verify for myself, but I can say that the problem is likely language-based, for the English version of LibreOffice 3.4  340m1(Build:12) on OpenSuse works fine (I checked all of the cases Rainer provided in Writer and Calc). Furthermore, for anyone who wishes to use scale, it looks like the directory to the tool has changed: Tools -> Options -> View, and scale will on the top left.
Comment 3 Rainer Bielefeld Retired 2011-06-23 13:36:10 UTC
I see the same problem with "LibreOffice 3.4.1RC1  – WIN7  Home Premium  (64bit) English UI [OOO340m1 (Build:101)]". 

So might be WIN related?

@Tor:
Petiteness!
Please feel free to reassign if it’s not your area
Comment 4 Robert Roth 2013-01-28 10:46:38 UTC
As this also affects Linux (Ubuntu 12.10) on x64 architecture, I am setting the OS and Platform fields to All.
Comment 5 Robert Roth 2013-01-28 10:46:50 UTC
*** Bug 59866 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2013-05-01 15:56:13 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d6f4391deb85012c4ede0bb5f35b1d6f347bc0f

Resoves: fdo#31849 ensure more button text remains vertically centered



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jorendc 2013-05-01 17:06:47 UTC
Thanks Caolán! I can verify this is fixed now using LibreOffice Version: 4.1.0.0.alpha0+ Build ID: a514c72071a4e572bb712f78b8b119ed0b2eb6b

Kind regards,
Joren