Resoves: fdo#31849 ensure more button text remains vertically centered

Is seems very bizarre that in Button::ImplDrawAlignedImage if
there is no image, that we still add padding for the image
separator to the text position. Why we have the concept of an
Image *and* a Symbol escapes me.

Anyway, setting the "Image" align to the right to match the
"Symbol" align stops the button text getting displaced downwards.

Change-Id: I67b80b2ff5cc960f5394cb7d69cab7a4c14513bf